# TractorBot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __main__.py  actor.py  better_bot.py  env.py  heu_bot.py  heu_bot_train.py  learner.py  model.py  model_pool.py  pyproject.toml  requirements.txt  train.py
configs/: default.yaml
scripts/: play.py  train.py
src/tractorbot/: config.py
src/tractorbot/agents/: better_bot.py  heu_botzone_bot.py  heu_train_bot.py  rule_bot.py
src/tractorbot/envs/: env.py  mvGen.py  wrapper.py
src/tractorbot/models/: model.py
src/tractorbot/rl/: actor.py  learner.py  model_pool.py  replay_buffer.py
tests/: test_smoke.py
