[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tractorbot"
version = "0.1.0"
description = "A reinforcement learning environment and bot for the Tractor card game."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.13.0",
    "numpy>=1.21.0",
    "PyYAML>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]